# white_dwarf

./: README.md  setup.cfg  setup.py
FILES/: N(S).txt  ResM04.txt  ResM05.txt  ResM06.txt  ResM07.txt  ResM08.txt  ResM09.txt  ResM10.txt  S+sigma.txt  radius.txt  untitled2.py
test/: test_wd.py
wd/: __init__.py  __main__.py  wd.py
