[metadata]
name = white_dwarf
version = 0.0.1
author = Dariya Lyapina
author_email = 'DariyaLyapinav@mail.ru'
description = white_dwarf
long_description = file: README.md
license = MIT
keywords = sample, science, astrophysics
classifiers = 
        Intended Audience :: Science/Research
        Intended Audience :: Education
        License :: OSI Approved :: MIT License
        Topic :: Education
        Topic :: Scientific/Engineering :: Astronomy
        Programming Language :: Python :: 3
        # See full list on https://pypi.org/classifiers/

[options]
packages = find:
install_requires =
    numpy>=1.13
    matplotlib>=2.0,<3.0
scripts =
    bin/white_dwarf

[options.entry_points]
console_scripts =
    wd = wd.wd:main
[options.packages.find]
exclude = 
    test